# Inference-Engine

./: .gitignore  CMakeLists.txt  README.md
CMake/: AddSource.cmake
Source/: CMakeLists.txt
Source/InferenceEngine/: CMakeLists.txt  Main.cpp
Source/InferenceEngine/AST/: ASTNode.hpp  ASTVisitor.hpp  CMakeLists.txt  ClauseFinder.hpp  ResolutionVisitor.hpp  Resolver.hpp  Sentence.hpp  SymbolFinder.hpp
Source/InferenceEngine/AST/Private/: ASTPrinter.hpp  ASTVisitor.cpp  ClauseFinder.cpp  ResolutionVisitor.cpp  Resolver.cpp  Sentence.cpp  Stringifier.hpp  SymbolFinder.cpp
Source/InferenceEngine/BC/: BC.hpp  BCatomic.hpp  BackwardChaining.hpp  CMakeLists.txt  PremiseWrapper.hpp
Source/InferenceEngine/BC/Private/: BC.cpp  BackwardChaining.cpp
Source/InferenceEngine/Core/: Agent.hpp  CMakeLists.txt  IEngine.hpp  KnowledgeBase.hpp  Response.hpp  Symbol.hpp
Source/InferenceEngine/Core/Private/: Agent.cpp  IEngine.cpp  KnowledgeBase.cpp  Symbol.cpp
Source/InferenceEngine/FC/: CMakeLists.txt  ForwardChaining.hpp
Source/InferenceEngine/FC/Private/: ForwardChaining.cpp
Source/InferenceEngine/Parsing/: CLIParser.hpp  CMakeLists.txt  Parser.hpp
Source/InferenceEngine/Parsing/Private/: CLIParser.cpp  Lexer.cpp  Lexer.hpp  Parser.cpp
Source/InferenceEngine/TT/: CMakeLists.txt  Model.hpp  TruthTable.hpp
Source/InferenceEngine/TT/Private/: Model.cpp  TruthTable.cpp
Tests/: BCTests.cpp  BackChainTests.cpp  CMakeLists.txt  CoutUtils.hpp  FCTests.cpp  KBTests.cpp  ParserTests.cpp  Skeleton.cpp  TruthTableTests.cpp  Untitled Document  VisitorTests.cpp  test1.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  tester.py
Tests/results/: inference-dist.csv  path-dist.csv  time-dist.csv
